.codex-tmp/sfproj/force-app/main/default/objects/Lead/fields/AI_readiness__c.field-meta.xml
<CustomField>
    <fullName>AI_readiness__c</fullName>
    <description>How would you best qualif﻿y your organization&apos;s AI readiness to get involved in AI projects?</description>
    <label>AI readiness</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
                <label>Not yet using AI</label>
            </value>
            <value>
                <fullName>Medium</fullName>
                <label>Exploring opportunities</label>
            </value>
            <value>
                <fullName>Low</fullName>
                <label>Pilot project in progress</label>
            </value>
            <value>
                <fullName>None</fullName>
                <label>Partial deployment of AI solutions</label>
            </value>
            <value>
                <fullName>Strategic AI adoption</fullName>
            </value>
            <value>
                <fullName>AI is core to our business (AI product, service, or solution provider)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>