.codex-tmp/sfproj/force-app/main/default/objects/Lead/fields/Ecosystem_Contribution__c.field-meta.xml
<CustomField>
    <fullName>Ecosystem_Contribution__c</fullName>
    <label>Ecosystem Contribution</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Enterprise - Supply chain user</fullName>
                <label>Startup (high-growth tech business)</label>
            </value>
            <value>
                <fullName>Service Provider - Transport, logistics or supply chain</fullName>
                <label>AI or technology solution provider</label>
            </value>
            <value>
                <fullName>Service Provider - AI or digital technologies</fullName>
                <label>AI Adopter</label>
            </value>
            <value>
                <fullName>Service Provider - Other professional services</fullName>
                <label>Investor - VC Fund</label>
            </value>
            <value>
                <fullName>Academic - University, research center or other institution</fullName>
                <label>Public or political organization</label>
            </value>
            <value>
                <fullName>Investor, Bank or VC</fullName>
                <label>Researcher / Academic</label>
            </value>
            <value>
                <fullName>Business incubator or accelerator</fullName>
                <label>Non-profit, association, or incubator</label>
            </value>
            <value>
                <fullName>Public sector or governmental organization</fullName>
                <label>International delegation</label>
            </value>
            <value>
                <fullName>Professional association or other non governmental organization</fullName>
                <label>Other</label>
            </value>
            <value>
                <fullName>Public organization (Government, professional association, cluster)</fullName>
                <isActive>false</isActive>
                <label>Public organization (Government, professional association, cluster)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>