.codex-tmp/sfproj/force-app/main/default/objects/Lead/fields/Organization_size__c.field-meta.xml
<CustomField>
    <fullName>Organization_size__c</fullName>
    <label>Organization size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>&lt; 50</fullName>
            </value>
            <value>
                <fullName>50 - 200</fullName>
            </value>
            <value>
                <fullName>201 - 500</fullName>
            </value>
            <value>
                <fullName>501 - 3,000</fullName>
            </value>
            <value>
                <fullName>3,001 - 20,000</fullName>
            </value>
            <value>
                <fullName>&gt; 20,000</fullName>
            </value>
            <value>
                <fullName>Micro enterprise: 1–10 employees</fullName>
            </value>
            <value>
                <fullName>Small enterprise: 11–99 employees</fullName>
            </value>
            <value>
                <fullName>Medium enterprise: 100–499 employees</fullName>
            </value>
            <value>
                <fullName>Large enterprise: 500+ employees</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>